--- a/assets/stylesheets/blocks/main.scss
+++ b/assets/stylesheets/blocks/main.scss
@@ -1,5 +1,5 @@
 
     .main {
         max-width: $width-desktop;
-        margin: $spacing-standard;
+        margin: $spacing-standard auto;
     }
